# fmt_bnchmrk

./: CMakeLists.txt  README.md  compilation-time.html  format-to-args.html  format-to-chrono-general.html  format-to-chrono-locale.html  format-to-chrono-specs.html  format-to-specs-align-fill-zero-precision.html  format-to-specs-sign.html  format-to-specs-types-for-float.html  format-to-specs-types-for-integer.html  format-to-trivial-float.html  format-to-trivial-int128.html  format-to-trivial-integral.html  format-to-trivial-long-double.html  format-to-trivial-string.html  index.html  library-size.html  script-compilation-time.js  script-format-to-args.js  script-format-to-chrono-general.js  script-format-to-chrono-locale.js  script-format-to-chrono-specs.js  script-format-to-specs-align-fill-zero-precision.js  script-format-to-specs-sign.js  script-format-to-specs-types-for-float.js  script-format-to-specs-types-for-integer.js  script-format-to-trivial-float.js  script-format-to-trivial-int128.js  script-format-to-trivial-integral.js  script-format-to-trivial-long-double.js  script-format-to-trivial-string.js  script-library-size.js  style.css
suites/: format_to_args.cpp  format_to_chrono.cpp  format_to_specs.cpp  format_to_trivial.cpp
utils/: CMakeLists.txt  macros.hpp  pseudo_random.cpp  pseudo_random.hpp
